# secret-santa

./: .gitignore  Dockerfile  Makefile  README.md  api.rest  app.py  fly.toml  pyproject.toml
migrations/versions/: 489222727eaf_initial_migration.py  d041a34f3cbb_initial_migration.py
templates/: index.html
templates/fragments/: blacklist.html  created_team.html  historic.html  input_person.html  list.html  partecipants.html  select_team.html  team_name.html
