[tool.poetry]
name = "secret-santa"
version = "0.1.0"
description = ""
authors = ["Andrea Crotti <andrea.crotti.0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
sqlalchemy = "^2.0.36"
flask-htmx = "^0.4.0"
flask-sqlalchemy = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
